terraform/ecs.tf
resource "aws_ecs_cluster" "main" {
  name = "${var.app_name}-cluster"
}

resource "aws_ecs_task_definition" "app" {
  family                   = "${var.app_name}-task"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = var.cpu
  memory                   = var.memory
  execution_role_arn = data.aws_iam_role.ecs_execution_role.arn  # Use the existing ECS execution role ARN
  task_role_arn      = data.aws_iam_role.codedeploy_role.arn      # Use the existing CodeDeploy role ARN

  container_definitions = jsonencode([{
    name      = "${var.app_name}-container"
    image     = "118273046134.dkr.ecr.us-east-1.amazonaws.com/strapi-app-karthik:latest"
    essential = true
    portMappings = [{
      containerPort = var.container_port
      hostPort      = var.container_port
    }]
    logConfiguration = {
      logDriver = "awslogs",
      options = {
        awslogs-group         = "/ecs/strapi-app-karthik",
        awslogs-region        = "us-east-1",
        awslogs-stream-prefix = "ecs"
      }
    }


  }])
}

resource "aws_ecs_service" "main" {
  name            = "${var.app_name}-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app.arn
  desired_count   = 1
  capacity_provider_strategy {
    capacity_provider = "FARGATE_SPOT"
    weight            = 2
  }

  capacity_provider_strategy {
    capacity_provider = "FARGATE"
    weight            = 1
  }

  

  network_configuration {
    subnets          = aws_subnet.public[*].id
    security_groups  = [aws_security_group.ecs_tasks.id]
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.blue.arn
    container_name   = "${var.app_name}-container"
    container_port   = var.container_port
  }
}
resource "aws_appautoscaling_target" "ecs_target" {
  max_capacity      = 10
  min_capacity      = 1
  resource_id = "service/${aws_ecs_cluster.main.name}/${aws_ecs_service.main.name}"
  scalable_dimension = "ecs:service:DesiredCount"
  service_namespace = "ecs"
}
